[gd_scene load_steps=32 format=3 uid="uid://6g0jtryj3kwm"]

[ext_resource type="Script" path="res://Tutorial/Tutorial.gd" id="1_7v537"]
[ext_resource type="TileSet" uid="uid://bhar52vwaumua" path="res://Shared/factory_tileset.tres" id="2_duqm6"]
[ext_resource type="Script" path="res://Tutorial/TutorialStages.gd" id="2_u2er1"]
[ext_resource type="PackedScene" uid="uid://bukmtg3hk4xkj" path="res://Entities/Player/Player.tscn" id="3_33lob"]
[ext_resource type="Script" path="res://Systems/EntityPlacer.gd" id="4_secw0"]
[ext_resource type="PackedScene" uid="uid://c3ljipsd1xli" path="res://GUI/GUI.tscn" id="4_voaax"]
[ext_resource type="PackedScene" uid="uid://eikwnrlq7dx" path="res://Entities/Minecart.tscn" id="5_3a56m"]
[ext_resource type="Theme" uid="uid://weaopiyujqgb" path="res://Shared/PixelTheme/pixel_theme.tres" id="5_acmsq"]
[ext_resource type="AudioStream" uid="uid://ctcf73xxbwgki" path="res://Shared/Music/exploratig_the_cosmos_1_sub_38_bit.ogg" id="5_enymh"]
[ext_resource type="Script" path="res://Entities/DestructionTimer.gd" id="5_xg1i1"]
[ext_resource type="Script" path="res://Tutorial/TutorialGUI.gd" id="6_2oj1l"]
[ext_resource type="Script" path="res://Systems/GroundEntitySpawner.gd" id="6_bonib"]
[ext_resource type="Texture2D" uid="uid://bo4ufccc1484h" path="res://Shared/General.png" id="6_jmadg"]
[ext_resource type="Texture2D" uid="uid://6r7kohtdjxh3" path="res://Shared/06_Hologram_Theme/Sprites/UI_Hologram_Textfield_02a.png" id="7_hyc7r"]
[ext_resource type="Script" path="res://Tutorial/TutorialEntitySpawner.gd" id="8_5uqhu"]
[ext_resource type="PackedScene" uid="uid://doikpy0r26sxu" path="res://Entities/Entities/TurretEntity.tscn" id="8_bx01j"]
[ext_resource type="Script" path="res://Tutorial/TutorialEntityWatcher.gd" id="9_ct7k3"]
[ext_resource type="PackedScene" uid="uid://cvachtv0y62o7" path="res://Systems/Pipe/PipeSystem.tscn" id="12_kqgmc"]
[ext_resource type="Script" path="res://Systems/BuildModeManager.gd" id="13_ymabs"]
[ext_resource type="Script" path="res://VFX/VfxManager.gd" id="14_hhop5"]

[sub_resource type="TileSet" id="TileSet_dl105"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6aa0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2t6a"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_enmcr"]
atlas = ExtResource("6_jmadg")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpb6q"]
atlas = ExtResource("6_jmadg")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_war12"]
atlas = ExtResource("6_jmadg")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8lqq"]
atlas = ExtResource("6_jmadg")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qt2a"]
atlas = ExtResource("6_jmadg")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6r0u"]
atlas = ExtResource("6_jmadg")
region = Rect2(192, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_sa1ll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enmcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpb6q")
}],
"loop": true,
"name": &"idle",
"speed": 0.4
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_war12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8lqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qt2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6r0u")
}],
"loop": true,
"name": &"speak",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_he2ej"]
texture = ExtResource("7_hyc7r")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(1, 1, 30, 30)

[node name="Tutorial" type="Node2D"]
process_mode = 1
script = ExtResource("1_7v537")

[node name="TutorialStages" type="Node2D" parent="."]
process_mode = 3
script = ExtResource("2_u2er1")

[node name="GameWorld" type="Node2D" parent="."]

[node name="Map" type="TileMap" parent="GameWorld"]
z_index = -5
tile_set = ExtResource("2_duqm6")
format = 2
layer_0/tile_data = PackedInt32Array(196612, 65536, 11, 262148, 65536, 11, 327684, 65536, 11, 393220, 65536, 11, 458756, 65536, 11, 524292, 65536, 11, 589828, 65536, 11, 655364, 65536, 11, 720900, 65536, 11, 786436, 65536, 11, 851972, 65536, 11, 196613, 65536, 11, 262149, 65536, 11, 327685, 65536, 11, 393221, 65536, 11, 458757, 65536, 11, 524293, 65536, 11, 589829, 65536, 11, 655365, 65536, 11, 720901, 65536, 11, 786437, 65536, 11, 851973, 65536, 11, 196614, 65536, 11, 262150, 65536, 11, 327686, 65536, 11, 393222, 65536, 11, 458758, 65536, 11, 524294, 65536, 11, 589830, 65536, 11, 655366, 65536, 11, 720902, 65536, 11, 786438, 65536, 11, 851974, 65536, 11, 196615, 65536, 11, 262151, 65536, 11, 327687, 65536, 11, 393223, 65536, 11, 458759, 65536, 11, 524295, 65536, 11, 589831, 65536, 11, 655367, 65536, 11, 720903, 65536, 11, 786439, 65536, 11, 851975, 65536, 11, 196616, 65536, 11, 262152, 65536, 11, 327688, 65536, 11, 393224, 65536, 11, 458760, 65536, 11, 524296, 65536, 11, 589832, 65536, 11, 655368, 65536, 11, 720904, 65536, 11, 786440, 65536, 11, 851976, 65536, 11, 196617, 65536, 11, 262153, 65536, 11, 327689, 65536, 11, 393225, 65536, 11, 458761, 65536, 11, 524297, 131072, 0, 589833, 65536, 11, 655369, 65536, 11, 720905, 65536, 11, 786441, 65536, 11, 851977, 65536, 11, 196618, 65536, 11, 262154, 65536, 11, 327690, 65536, 11, 393226, 65536, 11, 458762, 65536, 11, 524298, 65536, 11, 589834, 65536, 11, 655370, 65536, 11, 720906, 65536, 11, 786442, 65536, 11, 851978, 65536, 11, 196619, 65536, 11, 262155, 65536, 11, 327691, 65536, 11, 393227, 65536, 11, 458763, 65536, 11, 524299, 65536, 11, 589835, 65536, 11, 655371, 65536, 11, 720907, 65536, 11, 786443, 65536, 11, 851979, 65536, 11, 196620, 65536, 11, 262156, 65536, 11, 327692, 65536, 11, 393228, 65536, 11, 458764, 65536, 11, 524300, 65536, 11, 589836, 65536, 11, 655372, 65536, 11, 720908, 65536, 11, 786444, 65536, 11, 851980, 65536, 11, 196621, 65536, 11, 262157, 65536, 11, 327693, 65536, 11, 393229, 65536, 11, 458765, 65536, 11, 524301, 65536, 11, 589837, 65536, 11, 655373, 65536, 11, 720909, 65536, 11, 786445, 65536, 11, 851981, 65536, 11, 196622, 65536, 11, 262158, 65536, 11, 327694, 65536, 11, 393230, 65536, 11, 458766, 65536, 11, 524302, 65536, 11, 589838, 65536, 11, 655374, 65536, 11, 720910, 65536, 11, 786446, 65536, 11, 851982, 65536, 11, 196623, 65536, 11, 262159, 65536, 11, 327695, 65536, 11, 393231, 65536, 11, 458767, 65536, 11, 524303, 65536, 11, 589839, 65536, 11, 655375, 65536, 11, 720911, 65536, 11, 786447, 65536, 11, 851983, 65536, 11, 196624, 65536, 11, 262160, 65536, 11, 327696, 65536, 11, 393232, 65536, 11, 458768, 65536, 11, 524304, 65536, 11, 589840, 65536, 11, 655376, 65536, 11, 720912, 65536, 11, 786448, 65536, 11, 851984, 65536, 11, 196625, 65536, 11, 262161, 65536, 11, 327697, 65536, 11, 393233, 65536, 11, 458769, 65536, 11, 524305, 65536, 11, 589841, 65536, 11, 655377, 65536, 11, 720913, 65536, 11, 786449, 65536, 11, 851985, 65536, 11, 196626, 65536, 11, 262162, 65536, 11, 327698, 65536, 11, 393234, 65536, 11, 458770, 65536, 11, 524306, 65536, 11, 589842, 65536, 11, 655378, 65536, 11, 720914, 65536, 11, 786450, 65536, 11, 851986, 65536, 11, 196627, 65536, 11, 262163, 65536, 11, 327699, 65536, 11, 393235, 65536, 11, 458771, 65536, 11, 524307, 65536, 11, 589843, 65536, 11, 655379, 65536, 11, 720915, 65536, 11, 786451, 65536, 11, 851987, 65536, 11, 196628, 65536, 11, 262164, 65536, 11, 327700, 65536, 11, 393236, 65536, 11, 458772, 65536, 11, 524308, 65536, 11, 589844, 65536, 11, 655380, 65536, 11, 720916, 65536, 11, 786452, 65536, 11, 851988, 65536, 11, 196629, 65536, 11, 262165, 65536, 11, 327701, 65536, 11, 393237, 65536, 11, 458773, 65536, 11, 524309, 65536, 11, 589845, 65536, 11, 655381, 65536, 11, 720917, 65536, 11, 786453, 65536, 11, 851989, 65536, 11, 196630, 65536, 11, 262166, 65536, 11, 327702, 65536, 11, 393238, 65536, 11, 458774, 65536, 11, 524310, 65536, 11, 589846, 65536, 11, 655382, 65536, 11, 720918, 65536, 11, 786454, 65536, 11, 851990, 65536, 11, 196631, 65536, 11, 262167, 65536, 11, 327703, 65536, 11, 393239, 65536, 11, 458775, 65536, 11, 524311, 65536, 11, 589847, 65536, 11, 655383, 65536, 11, 720919, 65536, 11, 786455, 65536, 11, 851991, 65536, 11, 196632, 65536, 11, 262168, 65536, 11, 327704, 65536, 11, 393240, 65536, 11, 458776, 65536, 11, 524312, 65536, 11, 589848, 65536, 11, 655384, 65536, 11, 720920, 65536, 11, 786456, 65536, 11, 851992, 65536, 11, 131076, 327680, 11, 131077, 327680, 11, 131078, 327680, 11, 131079, 327680, 11, 131080, 327680, 11, 131081, 327680, 11, 131082, 327680, 11, 131083, 327680, 11, 131084, 327680, 11, 131085, 327680, 11, 131086, 327680, 11, 131087, 327680, 11, 131088, 327680, 11, 131089, 327680, 11, 131090, 327680, 11, 131091, 327680, 11, 131092, 327680, 11, 131093, 327680, 11, 131094, 327680, 11, 131095, 327680, 11, 131096, 327680, 11, 131097, 327680, 11, 196633, 327680, 11, 262169, 327680, 11, 327705, 327680, 11, 393241, 327680, 11, 458777, 327680, 11, 524313, 327680, 11, 589849, 327680, 11, 655385, 327680, 11, 720921, 327680, 11, 786457, 327680, 11, 851993, 327680, 11, 917529, 327680, 11, 917507, 327680, 11, 917508, 327680, 11, 917509, 327680, 11, 917510, 327680, 11, 917511, 327680, 11, 917512, 327680, 11, 917513, 327680, 11, 917514, 327680, 11, 917515, 327680, 11, 917516, 327680, 11, 917517, 327680, 11, 917518, 327680, 11, 917519, 327680, 11, 917520, 327680, 11, 917521, 327680, 11, 917522, 327680, 11, 917523, 327680, 11, 917524, 327680, 11, 917525, 327680, 11, 917526, 327680, 11, 917527, 327680, 11, 917528, 327680, 11, 131075, 327680, 11, 196611, 327680, 11, 262147, 327680, 11, 327683, 327680, 11, 393219, 327680, 11, 458755, 327680, 11, 524291, 327680, 11, 589827, 327680, 11, 655363, 327680, 11, 720899, 327680, 11, 786435, 327680, 11, 851971, 327680, 11)

[node name="Player" parent="GameWorld" instance=ExtResource("3_33lob")]

[node name="Cart" parent="GameWorld" instance=ExtResource("5_3a56m")]
position = Vector2(200, 105)

[node name="EntityPlacer" type="TileMap" parent="GameWorld"]
y_sort_enabled = true
tile_set = SubResource("TileSet_dl105")
format = 2
layer_0/name = "Entities"
layer_0/y_sort_enabled = true
script = ExtResource("4_secw0")

[node name="Timer" type="Timer" parent="GameWorld/EntityPlacer"]
one_shot = true
script = ExtResource("5_xg1i1")

[node name="ProgressBar" type="ProgressBar" parent="GameWorld/EntityPlacer/Timer"]
offset_left = 225.0
offset_top = 122.0
offset_right = 241.0
offset_bottom = 124.0
theme_override_styles/background = SubResource("StyleBoxFlat_m6aa0")
theme_override_styles/fill = SubResource("StyleBoxFlat_l2t6a")
value = 80.26
show_percentage = false

[node name="TurretEntity" parent="GameWorld/EntityPlacer" instance=ExtResource("8_bx01j")]
position = Vector2(104, 136)

[node name="GroundEntitySpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("6_bonib")

[node name="TutorialEntitySpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("8_5uqhu")

[node name="SpawnTimer" type="Timer" parent="GameWorld/TutorialEntitySpawner"]

[node name="SpawnPosition" type="Marker2D" parent="GameWorld/TutorialEntitySpawner"]
position = Vector2(152, 137)

[node name="TutorialEntityWatcher" type="Node2D" parent="GameWorld"]
script = ExtResource("9_ct7k3")

[node name="PipeSystem" parent="GameWorld" instance=ExtResource("12_kqgmc")]

[node name="BuildModeManager" type="Node2D" parent="."]
script = ExtResource("13_ymabs")

[node name="VfxManager" type="Node2D" parent="."]
script = ExtResource("14_hhop5")

[node name="SimulationTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" parent="CanvasLayer" instance=ExtResource("4_voaax")]

[node name="TutorialGUI" type="MarginContainer" parent="CanvasLayer"]
process_mode = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -52.0
offset_right = 140.0
offset_bottom = -1.99997
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("5_acmsq")
script = ExtResource("6_2oj1l")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TutorialGUI"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = -25

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TutorialGUI/HBoxContainer"]
custom_minimum_size = Vector2(64, 48.095)
layout_mode = 2
size_flags_vertical = 8

[node name="GeneralAnimationSprite" type="AnimatedSprite2D" parent="CanvasLayer/TutorialGUI/HBoxContainer/MarginContainer"]
z_index = 1
position = Vector2(32, 8)
sprite_frames = SubResource("SpriteFrames_sa1ll")
animation = &"idle"
frame_progress = 0.0594002

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/TutorialGUI/HBoxContainer"]
custom_minimum_size = Vector2(240, 50)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_he2ej")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TutorialGUI/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="GeneralTextBox" type="RichTextLabel" parent="CanvasLayer/TutorialGUI/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/line_separation = -4
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 7
theme_override_font_sizes/italics_font_size = 4
bbcode_enabled = true
text = "This is just some long test text. This is just some long test text. This is just some long test text. This is just some long test text. This is just some long test text. [i]This is just some long test text.[/i]"
visible_characters_behavior = 1

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_enymh")
volume_db = -6.0
autoplay = true
